# datasetter

./: pyproject.toml
src/datasetter/: __main__.py
