[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasetter"
version = "0.1.1"
dependencies = [
  "datasets",
  "matplotlib",
  "seaborn",
  "scikit-learn"
]

[project.scripts]
datasetter = "datasetter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
